<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key" translatable="false">stocks</string>


    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo">YHOO</string>
    <string name="default_stocks_apple">AAPL</string>
    <string name="default_stocks_microsoft">MSFT</string>
    <string name="default_stocks_facebook">FB</string>


    <string name="action_change_units" translatable="false">@string/pref_display_mode_key</string>


    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>
    <string name="error_no_stocks_widget">No stocks added! Please some stocks.</string>

    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>

    <string name="error_message_hint">Error Message</string>

    <string name="stock_symbol_default">GOOG</string>
    <string name="stock_price_default">1000.00</string>
    <string name="stock_percentage_default">100%</string>

    <!--Content descriptions-->
    <string name="button_add_stock">Add Stock Button</string>
    <string name="trending_up_image">Stock Trending Up</string>
    <string name="trending_down_image">Stock Trending Down</string>

    <!--Mock Data-->
    <string name="stock_name_default">GOOG</string>
    <string name="stock_currency_name">Currency: </string>
    <string name="stock_exchange_name">Exchange: </string>
    <string name="stock_price_name">Price: </string>
    <string name="stock_currency_val">€</string>
    <string name="stock_exchange_val">NASDAQ</string>
    <string name="stock_history_val">2015-03-09, 127.959999</string>
    <string name="stock_price_val">144</string>

    <string name="title_widget_detail">StockHawk Details</string>

</resources>
