<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/list_quote_layout_padding_right"
        android:paddingStart="@dimen/list_quote_layout_padding_left">

        <TextView
            android:id="@+id/symbol"
            style="@style/StockSymbolTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            tools:text="@string/stock_symbol_default" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">

            <TextView
                android:id="@+id/price"
                style="@style/BidPriceTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/list_quote_price_margin_end"
                tools:text="@string/stock_price_default" />

            <TextView
                android:id="@+id/change"
                style="@style/PercentChangeTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/percent_change_pill_green"
                android:paddingEnd="@dimen/list_quote_change_padding_right"
                android:paddingStart="@dimen/list_quote_change_padding_left"
                tools:text="@string/stock_percentage_default" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

</LinearLayout>
