<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/widget_list_item"
    android:background="@drawable/touch_selector_light"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingEnd="@dimen/list_quote_layout_padding_right"
        android:paddingStart="@dimen/list_quote_layout_padding_left">

        <TextView
            android:id="@+id/widget_symbol"
            style="@style/StockSymbolTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/widget_symbol_text_size"
            android:gravity="start|center_vertical"
            tools:text="@string/stock_symbol_default" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">

            <TextView
                android:id="@+id/widget_price"
                style="@style/BidPriceTextStyle"
                android:layout_width="wrap_content"
                android:textSize="@dimen/widget_bid_price_text_size"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/list_quote_price_margin_end"
                tools:text="@string/stock_price_default" />

            <TextView
                android:id="@+id/widget_change"
                style="@style/PercentChangeTextStyle"
                android:textSize="@dimen/widget_change_price_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/percent_change_pill_green"
                android:paddingEnd="@dimen/list_quote_change_padding_right"
                android:paddingStart="@dimen/list_quote_change_padding_left"
                tools:text="@string/stock_percentage_default" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>